--- a/package.json
+++ b/package.json
@@ -12,7 +12,19 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "@uniswap/token-lists": "^1.0.0-beta.19",
+    "@uniswap/v2-core": "^1.0.0",
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
+    "ethers": "^5.1.4",
+    "bignumber.js": "^9.0.0",
+    "lodash": "^4.17.21",
+    "react-countup": "^4.3.3",
+    "react-datepicker": "^4.2.1",
+    "js-cookie": "^2.2.1",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/walletconnect-connector": "^6.2.4"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^1.12.0"
