--- a/package.json
+++ b/package.json
@@ -6,27 +6,90 @@
     "start": "cross-env NODE_ENV=production node server.js"
   },
   "dependencies": {
-    "cross-env": "^7.0.2",
-    "express": "^4.17.1",
-    "next": "latest",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0",
-    "styled-components": "^5.2.3",
+    "@babel/core": "^7.14.6",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-arrow-functions": "^7.12.1",
+    "@babel/plugin-transform-classes": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/plugin-transform-spread": "7.12.1",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.12.7",
+    "@binance-chain/bsc-connector": "^1.0.0",
+    "@metamask/detect-provider": "^1.2.0",
+    "@ramonak/react-progress-bar": "^3.2.1",
     "@uniswap/token-lists": "^1.0.0-beta.19",
     "@uniswap/v2-core": "^1.0.0",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
-    "ethers": "^5.1.4",
-    "bignumber.js": "^9.0.0",
-    "lodash": "^4.17.21",
-    "react-countup": "^4.3.3",
-    "react-datepicker": "^4.2.1",
-    "js-cookie": "^2.2.1",
+    "@walletconnect/web3-provider": "^1.3.3",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
-    "@web3-react/walletconnect-connector": "^6.2.4"
+    "@web3-react/walletconnect-connector": "^6.2.4",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-less": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-lodash": "^3.3.4",
+    "babel-plugin-styled-components": "^1.12.0",
+    "babel-polyfill": "^6.26.0",
+    "bignumber.js": "^9.0.0",
+    "cross-env": "^7.0.2",
+    "dotenv": "^10.0.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.18.3",
+    "ethers": "^5.1.4",
+    "express": "^4.17.1",
+    "husky": "^1.3.1",
+    "js-cookie": "^2.2.1",
+    "lodash": "^4.17.21",
+    "next": "latest",
+    "next-build-id": "^3.0.0",
+    "next-compose-plugins": "^2.2.0",
+    "next-optimized-images": "^2.6.2",
+    "next-sass": "^1.0.3",
+    "node-sass": "^6.0.0",
+    "nprogress": "^0.2.0",
+    "prettier": "^2.0.5",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-countup": "^4.3.3",
+    "react-datepicker": "^4.2.1",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-router-dom": "^5.3.0",
+    "react-toastify": "^8.0.2",
+    "smoothscroll-polyfill": "^0.4.4",
+    "string_decoder": "^1.3.0",
+    "styled-components": "^5.2.3",
+    "styled-system": "^5.1.5",
+    "webpackbar": "^5.0.0-3"
   },
   "devDependencies": {
+    "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-styled-components": "^1.12.0"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,json,css}": [
+      "prettier --single-quote --write",
+      "git add"
+    ],
+    "src-mobile/**/*.{js,jsx,json,css}": [
+      "prettier --single-quote --write",
+      "git add"
+    ],
+    "src-embed/**/*.{js,jsx,json,css}": [
+      "prettier --single-quote --write",
+      "git add"
+    ]
+  },
+  "rules": {
+    "react/jsx-uses-vars": 2
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
